# document-editor-backend

./: .env  .gitignore  CHANGELOG.md  LICENSE  README.md  document-editor.cabal  elm.js
.history/: document-editor_20241023132046.cabal  document-editor_20241023132053.cabal  document-editor_20241023132055.cabal  document-editor_20241023132122.cabal
.history/app/: Main_20241023132142.hs
.history/src/: Server_20241023132150.hs
.history/src/Api/: Document_20241023132156.hs
.history/src/Database/: DocumentDB_20241023132212.hs
.history/src/Websocket/: Collab_20241023132208.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
elm/: App.elm
src/: Auth.hs  Frontend.hs  Main.hs  Model.hs  Server.hs
src/Api/: Auth.hs  AuthAPI.hs  AuthServer.hs  Document.hs  DocumentAPI.hs
src/ConflictResolution/: Conflict.hs
src/Database/: Config.hs  DocumentDB.hs  Utils.hs
src/Websocket/: Collab.hs
static/: index.html
