cabal-version:      3.0
name:               document-editor
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             rupaut98
maintainer:         rupakraut78@gmail.com
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md

executable document-editor
    -- .hs or .lhs file containing the Main module.
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Api.AuthAPI,
                      Api.AuthServer,
                      Api.DocumentAPI,
                      Auth,
                      Model,
                      Server,
                      WebSocket.Collab

    -- GHC options
    ghc-options:      -Wall

    -- Other library packages from which modules are imported.
    build-depends:    base >=4.7 && <5,
                      servant,
                      servant-server,
                      servant-auth,
                      servant-auth-server,
                      warp,
                      persistent,
                      persistent-template,
                      websockets,
                      wai,
                      jwt,
                      bcrypt,
                      bytestring,
                      transformers,
                      text,
                      aeson,
                      wai-websockets,
                      wai-app-static >=3.1.7,
                      http-types >=0.12 && <0.13,
                      tagged,
                      mtl,
                      stm,
                      containers,
                      beam-core,
                        beam-postgres,
                        beam-migrate,
                        monad-logger


                      

    -- Directories containing source files.
    hs-source-dirs:   app, src

    -- Base language which the package is written in.
    default-language: GHC2021
